<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/main_personal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_personal_head2"
            android:maxLength="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/main_personal_sex"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/add_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="0"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/add_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal_sex_female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal_sex_male" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/add_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_personal_tel"
            android:inputType="phone"
            android:maxLength="11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/main_personal_deadline"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <DatePicker
            android:id="@+id/add_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/main_car"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_personal_car_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/add_car_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="0"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/add_car_type_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal_car_type_ele_bicycle" />

                <RadioButton
                    android:id="@+id/add_car_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal_car_type_moto" />

                <RadioButton
                    android:id="@+id/add_car_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal_car_type_" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp" >

            <Button
                android:id="@+id/add_ok_btn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/register_btn"
                android:text="@string/Sys_Yes"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/add_cancle_btn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/register_btn"
                android:text="@string/Sys_Cancel"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>