<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sliding_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/menu_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:background="@drawable/menu_btn_lock"
            android:onClick="lockCar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_lock"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:background="@drawable/menu_btn_unlock"
            android:onClick="unlockCar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_unlock"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/menu_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:background="@drawable/menu_btn_recharge"
            android:onClick="recharge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_recharge"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>