<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:hint="@string/hello_world" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:src="@drawable/query" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:src="@drawable/scan" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/data_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/data_head_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_personal_head1"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" >
            </LinearLayout>

            <TextView
                android:id="@+id/data_head_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_personal_head2"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" >
            </LinearLayout>

            <TextView
                android:id="@+id/data_head_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_personal_head3"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/data_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/data_head" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:background="@drawable/corners_bg"
            android:src="@drawable/add" />
    </RelativeLayout>

</LinearLayout>