<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/title"
        style="@style/title"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:background="@color/under_line" />

    <TextView
        android:id="@+id/title_string"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/main_temp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp" />

    <ImageView
        android:id="@+id/main_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/main_menu" />

    <ImageView
        android:id="@+id/main_set"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:onClick="goToSet"
        android:src="@drawable/main_set" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="1dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/under_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/under_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#F9F9F9"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <LinearLayout
                android:id="@+id/main_recording_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/main_recording_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/main_recording_fouse" />

                <TextView
                    android:id="@+id/main_recording_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_recording"
                    android:textColor="@color/main_color2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_recharge_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/main_recharge_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/main_recharge" />

                <TextView
                    android:id="@+id/main_recharge_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_recharge"
                    android:textColor="@color/main_disable" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/main_personal_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/main_personal_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/main_personal" />

                <TextView
                    android:id="@+id/main_personal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_personal"
                    android:textColor="@color/main_disable" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>